Closed Bug 163718 Opened 23 years ago Closed 23 years ago

Quick Launch doesn't exit

Categories

(Core Graveyard :: QuickLaunch (AKA turbo mode), defect)

x86
Windows XP
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: scottputterman, Assigned: law)

Details

Attachments

(1 file)

I'm using the 8/20 branch build on Win XP 1. Start up with multiple profiles and choose a profile. 2. Exit 3. Start up again. You don't get the profile picker and I think you are in the same profile you just exited. Dan, could this be related to the changes you made for exiting the app yesterday?
I think this is an adt1 rtm, but I'll let Evelyn make the call.
Keywords: nsbeta1+
Whiteboard: [adt1 rtm]
This is definitely a stop ship. It's worse than originally reported. File | Exit doesn't work regardless of the # of profiles. 1. start up with 1 profile 2. log into mail 3. File | Exit 4. start up again. 5. You aren't prompted for your mail password because you never really quit.
Summary: Quick Launch doesn't bring up profile manager with multiple profiles → Quick Launch doesn't exit
Changing severity to Critical, and setting milestone for 1.0.1, as we need before 1.0.1 ships.
Severity: normal → critical
Whiteboard: [adt1 rtm] → [adt1 rtm] [ETA Needed]
Target Milestone: --- → mozilla1.0.1
If this is only a problem on the branch and not the trunk, then shouldn't it be marked as fixed?
Bill said he'd look into this. If it turns out that the fix for http://bugzilla.mozilla.org/show_bug.cgi?id=130719 caused this, my suggestion would be to back out the changes and just add the original patch that puts a pref around the code.
Yes this was fallout from the patch for bug 130719. Defensively I add that I did actually think to test -turbo mode before I checked in that patch. It still worked, but it turns out not as expected. Bill and I came up with this patch (for the trunk and 1.0 branch) to bring the -turbo code into the new world.
*** Bug 163608 has been marked as a duplicate of this bug. ***
Also look at the symptoms reported in Bug 163710. Hopefully a fix for this bug will fix bug 173710 as well.
Typo: I meant to say "Also look at the symptoms reported in Bug 163710. Hopefully a fix for this bug will fix bug 163710 as well".
Comment on attachment 96085 [details] [diff] [review] make turbo code happy in the slightly new shutdown environment, trunk and 1.0 branch mInitialWindow should be a boolean with a clearer name, not a potentially (maybe not in practice?) dangling weak raw pointer. The changes around line 2595 deserve a comment that there are no windows up (docshell is null for a reason). OnLastWindowClosing is ambiguously named: is the last window gone, or not? It used to be around still, and docshell was non-null; now, with the fix for bug 130719, the last window is "more gone" (docshell is null). sr=brendan@mozilla.org as is, but can you do some 1.2alpha cleaning and commenting to use a proper boolean and stuff? Thanks. /be
Attachment #96085 - Flags: superreview+
Comment on attachment 96085 [details] [diff] [review] make turbo code happy in the slightly new shutdown environment, trunk and 1.0 branch r=law The first chunk modifies the test for whether the window that is closing is the pseudo-Navigator window that is open (hidden) at turbo startup. That logic is simplified via the assumption that the first window closed after we open that window will be the pseudo-Nav window itself. That will always be the case because we block opening of other windows via a check for mInititialWindow in HandleRequest. The second chunk simply modifies the dialog display to do it without using the window that just closed as parent. Since the dialog is informational, the parent window was always closed immediately after dismissing the the dialog. Now, in effect, it is closed immediately before the dialog appears.
Attachment #96085 - Flags: superreview+ → review+
2002-08-20 branch build-win98. Netscape quick launch icon tries to fight with the AIM standalone icon (running man) in the system tray at the system restart. This is when having the AIM 5.0 standalone prefs checked to start when windows restarts pref checked. And after installing today's build. I am seeing this behavior only with today's build. This could be another symptom caused by this bug. Grace, I will check this scenario when this bug gets fixed since I am able to reproduce this on my system.
I see this with 8/20 branch build, installed already having multiple profiles and could not bring up Profile Manager to create new profile to test another bug. :( I I am on Win 2k
I think that a bug I reported (bug 163725) is in some part a duplicate of this one. As I am a *great* user of quicklaunch, I "downgrade" to 1.1 pre-release until bug 163725 is fixed on trunk. Are these two bugs like "twin brothers" ? ;-)
the fix that caused this was backed out on the 1.0 branch. Removing mach v keywords.
Keywords: nsbeta1+
Whiteboard: [adt1 rtm] [ETA Needed] → [ETA Needed]
Patch is in, with Brendan's comment and Brendan's variable changed to a boolean. Trunk-only (the 1.0 branch doesn't require this fix).
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [ETA Needed]
Target Milestone: mozilla1.0.1 → mozilla1.2alpha
verified on trunk build 2002082204 (also verified 8/21 branch working properly)
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: