removing parameter to nsINativeAppSupport::OnLastWindowClosing. Also bringing up to date with nsNativeAppSupportWin.cpp rev 1.82 (see bug 163718). bug 163918 r=brendan,law